# openai_client

./: .gitignore  pyproject.toml
openai_client/: .env  main.py
openai_client/lib/: __init__.py  openai_wrapper.py  role.py  setup_logging.py
tests/: test_chat.py  test_role.py
